# iron-condor

./: .gitignore  CacheDailyOHLCV-test-spy.py  CacheDailyOHLCV-test.py  CacheDailyOHLCV.py  CacheEarning-test.py  CacheEarning.py  Options_Using_SPX_10_NetDelta.PY  Options_Using_SPX_10_NetDelta_Fixed4.PY  README.md  SPX_IronCondor_10Year_NetDelta_Fixed4_Backtest.csv  SPY.csv  SPY_Daily_Data.xlsx  VIX_Daily_Data.xlsx  analyze_trades.py  backtest_engine.py  base_strategy.py  call_spread.py  config.ini  config.py  config_stocks.py  data_loader.py  one_sided_spread.py  pandas-ta-test.py  pricing.py  put_spread.properties  put_spread.py  pyproject.toml  remove_col.py  reporting.py  requirements-dev.txt  requirements.txt  run_scanner.py  scan_today.py  scanner.py  snp500_ticker_hist.py  spx_2018.xlsx  spx_2019.xlsx  spx_2020.xlsx  spx_2021.xlsx  spx_2025.xlsx  (+6 more)
datas/: SPX.csv  spx_2016.xlsx  spx_2017.xlsx  spx_2022.xlsx  spx_2023.xlsx  spx_2024.xlsx
outputs/: SPX_IronCondor_10Year_NetDelta_Fixed4_Backtest.csv  Stock_Put_Spread_10Year_Backtest.csv  Stock_Put_Spread_Backtest.csv  Stock_Put_Spread_Backtest_1.csv  Stock_Put_Spread_Backtest_2.csv
yfdatas/: AAPL_earnings.csv  MSFT_earnings.csv  SPY.csv
